app2/overlay/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  selector:
    app: app2
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31112
